syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.justtest";
option java_outer_classname = "JustTestProto";
option objc_class_prefix = "WY";

package onlytest;

service Greeter {
    rpc TestSomeThing (TestRequest) returns (TestResponse) {
    }
}

message TestRequest {
    string name = 1;
}
message TestResponse {
    string message = 1;
}